CodeStyle and JDK16 related refactoring.
Signed-off-by: Narimm <benjicharlton@gmail.com>